# sentinel

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
data/raw/: .gitkeep  target_channels.csv
docs/: results.md
notebooks/: 01-eda.ipynb  02-preprocessing.ipynb  03-baseline_iforest.ipynb  04-baseline_pca.ipynb
src/sentinel/: __init__.py  params.py
src/sentinel/ml_logic/: __init__.py  data.py  metrics.py  viz.py
tests/: test_metrics.py
